# financial-simulator

./: .gitignore  README.md  alembic.ini  convert_readme_notebook.sh  convert_readme_notebooks.sh  corporate_tax.ipynb  corporate_tax.md  daily_interest_calculations.ipynb  jupytext_notebook_to_py.sh  jupytext_notebooks_to_py.sh  jupytext_py_to_notebook.sh  jupytext_py_to_notebooks.sh  makefile  pyproject.toml  requirements.txt  sample.ipynb  simulation.md
backend/: financial-simulator.toml  pyproject.toml  simulation.md
backend/test/: test_accounting.py
data/: corporation_tax_bands.json
frontend/: .gitignore  openapi-ts.config.ts  package-lock.json  package.json  react-router.config.ts  vite.config.ts
frontend/app/: ApiError.ts  root.tsx  routes.ts  strings.ts
lib/: simulation.py  tax_bands_by_year.py
lib/amount/: amount.py
lib/asset/: asset.py  bank_account.py  investment.py
lib/bank_accounts/: README.ipynb  README.md  README.py  __init__.py  balance_change.py  bank_account.py  bank_account_reducer.py  interest_accrual.py  interest_application.py
lib/daily_rate_calculators/: README.ipynb  README.md  __init__.py  continuous_daily_rate_calculator.py  daily_rate_calculator.py  periodic_daily_rate_calculator.py
lib/entities/: corporation.py  entity.py  individual.py
lib/entity/: corporation.py  entity.py  individual.py
lib/interest/: banded_interest.py  interest.py
lib/provider/: README.ipynb  (+9 more)
test/: test_accounting.py  test_bands.py  test_container.py  test_engine.py  test_generate_states.py  test_providers.py  test_rates.py  test_schedules.py
(+498 files in other folders)
